fixd img size to align w grid, pagination link cover on hover

--- a/css/Sass/pages/_blog.scss
+++ b/css/Sass/pages/_blog.scss
@@ -31,8 +31,8 @@
 
 
 .single-post-img {
-	width: 100%;
-	height: 100%;
+	width: 109%;
+	height: 109%;
 }
 
 .pagination-container {
@@ -62,7 +62,8 @@
 	color: $silver;
 	transition: $transition;
 	&:hover, &:active, &:link {
-		color: $dark-silver;
+		color: $saffron;
+		text-decoration: none;
 	}
 }
 
